12-04-2018/Lab-9
// RANGES

>>> for i in range(10):
...     print(i)
... 
0
1
2
3
4
5
6
7
8
9
>>> 
>>> a=range(10)
>>> for i in a:
...     print(i)
... 
0
1
2
3
4
5
6
7
8
9
>>> for i in a;print(i)
  File "<stdin>", line 1
    for i in a;print(i)
              ^
SyntaxError: invalid syntax
>>> for i in a:print(i)
... 
0
1
2
3
4
5
6
7
8
9
>>> 
>>> a
range(0, 10)
>>> 
>>> for i in range(1,10):
...     print(i)
... 
1
2
3
4
5
6
7
8
9
>>> 
>>> for i in range(1,10,2):
...     print(i)
... 
1
3
5
7
9
>>> 
>>> 
